<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal" >

    <Button
        android:id="@+id/characters"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/characterButton" />

    <Button
        android:id="@+id/armor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/armorButton" />

    <Button
        android:id="@+id/meleeWeapon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/meleeWeaponButton" />

    <Button
        android:id="@+id/rangedWeapon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/rangedWeaponButton" />

</LinearLayout>